footer fixed on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -807,9 +807,12 @@ footer > nav > ul {
   footer {
     scroll-snap-align: start;
     position:static;
-    z-index: 11;
-    height: 25%;
+    z-index: 100;
+    height: 150px;
     flex-direction: column;
+    margin-top: 0;
+    margin-bottom: 50px;
+    overflow: hidden;
   }
   
   footer > nav > ul {
